# bazel_rules_osvvm

./: .git-vendor-config  MODULE.bazel  README.md
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: build.yml  tag-and-release.yml
integration/: MODULE.bazel  test.vhdl
integration/tool.nvc/: BUILD.bazel
tool.nvc/: BUILD.bazel
