load("@bazel_rules_nvc//build/nvc:rules.bzl", "vhdl_library")

package(default_visibility = ["//visibility:public"])

vhdl_library(
    name = "osvvm",
    # do not sort
    srcs = [
        "//third_party:srcs1",
        "//third_party:srcs2_nvc",
        "//third_party:srcs",
    ],
    standard = "2019",
)
